--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+package-lock.json
 .clj-kondo/
 .history
 .hypothesis/
@@ -8,3 +9,12 @@ reports/
 scripts/
 scripts/sendfunds.py
 node_modules
+node_modules
+.env
+coverage
+coverage.json
+typechain
+
+#Hardhat files
+cache
+artifacts
